Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-62912

Hover is not reset properly with touchscreens

XMLWordPrintable

    • ef7d809ea (dev), 028bd2104 (6.5), 10950d87f (6.6)

      1 : Create a button (controls 2.0)
      2 : Click on button with a touchscreen and log the onHoveredChanged signal.

      What is happening with a touch screen :
      the hovered property is set to true on click but is never reset to false on release.

      It seems that on touch screen only, hovered is disabled due to this.
      QTBUG-44267

      Our application can use a touch device and a mouse at the same time.
      The hover should be disabled on touch events or should behave correctly. But the observed behavior is inconsistent.

      import QtQuick 2.0
      import QtQuick.Controls 2.2

      Button {
      hoverEnabled:true

      onHoveredChanged :

      { console.log(hovered) }

      }

        For Gerrit Dashboard: QTBUG-62912
        # Subject Branch Project Status CR V

            matthias_rauter Matthias Rauter
            mathieut Mathieu TOURNIER
            Votes:
            4 Vote for this issue
            Watchers:
            16 Start watching this issue

              Created:
              Updated:
              Resolved: